<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <TextView 
        android:id="@+id/activity_main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_main_title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:textSize="20sp"
        android:layout_marginTop="8px"
        android:layout_marginLeft="8px"
        
        />
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_main_text1"
        android:layout_below="@+id/activity_main_title"
        android:layout_marginTop="8px"
        android:layout_marginLeft="8px"
        />
 
    <Button 
        android:id="@+id/setupAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/activity_main_setup_button" />
	
</RelativeLayout>